# STM32CubeWB

./: .gitignore
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_HeartRate/: .mxproject  BLE_HeartRate.ioc  mx.scratch
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_HeartRate/EWARM/: BLE_HeartRate.ewp
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_HeartRate/MDK-ARM/: BLE_HeartRate.uvprojx
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_HeartRate/STM32CubeIDE/: .cproject  .project
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_HeartRate/STM32_WPAN/App/: app_ble.c  dis_app.h  obs_app.c  obs_app.h
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_TransparentMode/: .mxproject  BLE_TransparentMode.ioc  CMakeLists.txt  readme.txt  startup_stm32wb55xx_cm4.s
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_TransparentMode/Binary/: BLE_TransparentMode_OB2_EMG_V4.elf  BLE_TransparentMode_OB2_EMG_V4_with_charging.elf  BLE_TransparentMode_OB2_FRB_V1.elf  README - EMG & EXEC.md
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_TransparentMode/Core/Inc/: BQ25120A_Battery_Charger.h  BQ25120A_reg.h  app_conf.h  charger_control.h  hw_conf.h  led.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_TransparentMode/Core/Src/: BQ25120A_Battery_Charger.c  app_entry.c  charger_control.c  led.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_TransparentMode/EWARM/: BLE_TransparentMode.ewd  BLE_TransparentMode.ewp
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_TransparentMode/STM32_WPAN/App/: tm.c
Projects/P-NUCLEO-WB55.Nucleo/Applications/BLE/BLE_TransparentMode/cmake/stm32cubemx/: CMakeLists.txt
